--- a/no1.html
+++ b/no1.html
@@ -12,9 +12,13 @@
     <div class="headcase2">
         <img src="C:\Users\congr\Documents\background_image.jpg">
     </div>
-    <div class="search_bar">
-        <input type="text" placeholder="Search">
-        <button type="submit">Search</button>
+    <div class="topnav">
+        <div class="search-container">
+            <form action="/action_page.php">
+            <input type="text" placeholder="Search" name="search">
+            <button type="submit">Find</button>
+            </form>
+        </div>
     </div>
     <h1>Harry Potter Gryffindor Charaters</h1>
     <div class="info1">
