--- a/no5.html
+++ b/no5.html
@@ -12,8 +12,13 @@
     <div class="headcase4">
         <img src="C:\Users\congr\Documents\background_image.jpg">
     </div>
-    <div class="search_bar">
-        <input type="text" placeholder="Search">
+    <div class="topnav">
+        <div class="search-container">
+            <form action="/action_page.php">
+            <input type="text" placeholder="Search" name="search">
+            <button type="submit">Find</button>
+            </form>
+        </div>
     </div>
     <h1>Harry Potter Hufflepuff Charaters</h1>
     <div class="info3">
